[package]
name = "goodnight"
version = "0.1.4"
edition = "2018"
description = "sleep well 🌈🛌💜"

[dependencies]
directories = "3.0"
serde = { version = "1.0", features = ["derive"] }
confy = { git = "https://github.com/rust-cli/confy", rev = "664992ae", features = ["yaml_conf"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
cocoa = "0.24"
objc = "0.2"
# focus_window is still unreleased
winit = { git = "https://github.com/rust-windowing/winit", rev = "5a65347" }

[package.metadata.bundle]
